--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "yelpcampv2",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -9,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "description": "",
   "dependencies": {
     "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "dotenv": "^16.0.1",
     "ejs-mate": "^4.0.0",
+    "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "helmet": "^5.1.1",
