--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "helmet": "^5.1.1",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
+    "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
